--- a/css/demo.css
+++ b/css/demo.css
@@ -113,7 +113,7 @@ body{
 }
 .content .phone-box header{
     padding-top: 22px;
-    background-color: #272823;
+    background-color: #ff8400;
     color: #fff;
 }
 .content .phone-box header p{
