--- a/css/demo.css
+++ b/css/demo.css
@@ -99,7 +99,7 @@ body{
 .content .phone-box .screen{
     position: absolute;
     top: 23px;
-    left: 29px;
+    left: 28px;
     right: 27px;
     bottom: 23px;
     background-color: #f5f5f5;
@@ -153,7 +153,7 @@ body{
 .content .tb-wrap .tb tr:nth-child(odd) td{
     background-color: #fff;
 }
-.content .p-select-main{
+.content .p-scroll{
     position: absolute;
 }
 
